--- a/fluxt.opam
+++ b/fluxt.opam
@@ -1,15 +1,13 @@
 opam-version: "2.0"
-name:         "flux"
+name:         "fluxt"
 maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
-authors:
-  [ "Romain Calascibetta <romain.calascibetta@gmail.com>"
-    "Rizo I <rizo@odis.io>" ]
+authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
 homepage:     "https://github.com/robur-coop/flux"
 bug-reports:  "https://github.com/robur-coop/flux/issues"
 dev-repo:     "git+https://github.com/robur-coop/flux.git"
 doc:          "https://robur-coop.github.io/flux/"
 license:      "MIT"
-synopsis:     "Composable streaming abstractions with Miou"
+synopsis:     "Extensions of flux to provide basic streams (compression, hash, format)"
 
 build: [ "dune" "build" "-p" name "-j" jobs ]
 run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
@@ -18,7 +16,9 @@ depends: [
   "ocaml"             {>= "5.0.0"}
   "dune"              {>= "2.8.0"}
   "miou"              {>= "0.5.0"}
-  "logs"
+  "decompress"
+  "tar"
+  "digestif"
   "ocamlformat"       {with-dev-setup & = "0.27.0"}
 ]
 x-maintenance-intent: [ "(latest)" ]
