--- a/flux.opam
+++ b/flux.opam
@@ -18,7 +18,7 @@ depends: [
   "ocaml"             {>= "5.0.0"}
   "dune"              {>= "2.8.0"}
   "miou"              {>= "0.5.0"}
-  "logs"
   "ocamlformat"       {with-dev-setup & = "0.27.0"}
+  "alcotest"          {with-test}
 ]
 x-maintenance-intent: [ "(latest)" ]
