--- a/flux.opam
+++ b/flux.opam
@@ -19,6 +19,8 @@ depends: [
   "dune"              {>= "2.8.0"}
   "miou"              {>= "0.5.0"}
   "ocamlformat"       {with-dev-setup & = "0.27.0"}
+  "httpcats"                    {with-dev-setup}
+  "mirage-crypto-rng-miou-unix" {with-dev-setup}
   "alcotest"          {with-test}
 ]
 x-maintenance-intent: [ "(latest)" ]
