--- a/flux.opam
+++ b/flux.opam
@@ -16,7 +16,7 @@ run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
 
 depends: [
   "ocaml"                       {>= "5.0.0"}
-  "dune"                        {>= "2.8.0"}
+  "dune"                        {>= "3.20.0"}
   "miou"                        {>= "0.5.0"}
   "ocamlformat"                 {with-dev-setup & = "0.27.0"}
   "httpcats"                    {with-dev-setup}
@@ -24,3 +24,4 @@ depends: [
   "alcotest"                    {with-test}
 ]
 x-maintenance-intent: [ "(latest)" ]
+available: os-family != "windows"
