--- a/fluxt.opam
+++ b/fluxt.opam
@@ -20,6 +20,7 @@ depends: [
   "tar"               {>= "3.3.0"}
   "bstr"
   "digestif"          {>= "1.3.0"}
+  "angstrom"
   "flux"              {= version}
   "ocamlformat"       {with-dev-setup & = "0.27.0"}
   "alcotest"          {with-test}
