--- a/fluxt.opam
+++ b/fluxt.opam
@@ -21,6 +21,7 @@ depends: [
   "bstr"
   "digestif"          {>= "1.3.0"}
   "angstrom"
+  "ptime"
   "flux"              {= version}
   "ocamlformat"       {with-dev-setup & = "0.27.0"}
   "alcotest"          {with-test}
